# qrapp

./: .gitignore  README.md  build.gradle  release.jks  settings.gradle  shrink.sh
app/: build.gradle
app/release/: app-release.apk  output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp
gradle/wrapper/: gradle-wrapper.properties
reference/: README.md
